2006-02-04 Scott Dattalo <scott@dattalo.com>
	* src/dspic/dspic-instructions.cc, src/dspic/dspic-instructions.h,
	src/dspic/dspic-processors.cc: 
	Added support for the Literal, Register Direct,  and Register
	Indirect addressing modes.

2006-02-03 Roy Rankin <rrankin@ihug.com.au>
	* src/processor.cc, src/pic-processor:
	The pic-processor class was over-writing the
	cycles_per_instruction value in the processor class
	* modules/switch.cc, modules/switch.h, modules/resistor.cc,
	regression/switch_test/switch_test.stc,
	regression/switch_test/switch_test.asm: 
	Switch modules now handle analog inputs and RC loads.
	
2006-01-30 Scott Dattalo <scott@dattalo.com>
	* src/processor.cc, src/processor.h: added methods for mapping
	register addresses into register indexes (for the dspic) and use
	this to create invalid registers.
	* src/registers.cc: contructors now propagate calls to parents
	* gui/gui_regwin.cc: a non-existent register at address 0 was
	crashing the register window
	* src/dspic/dspic-instructions.cc, src/dspic/dspic-instructions.h,
	src/dspic/dspic-processors.cc, src/dspic/dspic-processors.h,
	src/dspic/dspic-registers.cc, src/dspic/dspic-registers.h:
	dspic port:
	  -- added register memory
	  -- added W0-W15
	  -- invalid registers populate register space
	  -- added Program Counter
	  -- single stepping works.
	  -- GOTO, RCALL and BRA instructions are now supported.

2006-01-25 Roy Rankin <rrankin@ihug.com.au>
	* gui/gui_profile.cc: fix core dump

2005-01-29 J.R. Heisey <jrheisey@sourceforge.com
	* cli/cmd_break.cc: I prevent ei from being incremented for
	pThird if pSecond does not exist. This was causing a crash
	in Windows because pThird ended up point to the same object
	as pFirst. (go figure) Later pThird was getting deleted then
	pFirst (the same object) was getting referenced causing the
	crash.
	(i.e. break e MYLABEL where MYLABEL is not defined.) I also
	added a check to bpn == -1 and write an error. This provides